--- a/Dark Days/Dark Days/InfoCell.xib
+++ b/Dark Days/Dark Days/InfoCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -17,12 +17,12 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="749" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8V-3x-kFQ">
-                        <rect key="frame" x="8" y="34" width="299" height="53"/>
+                        <rect key="frame" x="8" y="34" width="299" height="30"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <attributedString key="attributedText"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Elf-Male.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ssa-TL-ct5">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ssa-TL-ct5">
                         <rect key="frame" x="8" y="8" width="56" height="56"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Ssa-TL-ct5" secondAttribute="height" multiplier="1:1" id="2Gx-67-CNB"/>
@@ -38,14 +38,14 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="bwb-Ib-sok" firstAttribute="leading" secondItem="Ssa-TL-ct5" secondAttribute="trailing" constant="8" id="3ag-eh-66C"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="g8V-3x-kFQ" secondAttribute="bottom" constant="5" id="6FS-JO-PM1"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="g8V-3x-kFQ" secondAttribute="bottom" constant="5" id="6FS-JO-PM1"/>
                     <constraint firstItem="Ssa-TL-ct5" firstAttribute="top" secondItem="wI4-qv-xSV" secondAttribute="topMargin" id="6uq-MP-DI9"/>
                     <constraint firstAttribute="trailingMargin" secondItem="bwb-Ib-sok" secondAttribute="trailing" id="D44-hc-ZTe"/>
                     <constraint firstItem="g8V-3x-kFQ" firstAttribute="leading" secondItem="wI4-qv-xSV" secondAttribute="leadingMargin" id="HKe-9h-JcS"/>
                     <constraint firstItem="Ssa-TL-ct5" firstAttribute="leading" secondItem="wI4-qv-xSV" secondAttribute="leadingMargin" id="Izc-Sd-xta"/>
                     <constraint firstItem="g8V-3x-kFQ" firstAttribute="top" secondItem="bwb-Ib-sok" secondAttribute="bottom" constant="5" id="NxN-YI-o8c"/>
                     <constraint firstAttribute="trailingMargin" secondItem="g8V-3x-kFQ" secondAttribute="trailing" constant="5" id="Pim-D3-X2N"/>
-                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Ssa-TL-ct5" secondAttribute="bottom" constant="5" id="c8X-xi-u8Z"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Ssa-TL-ct5" secondAttribute="bottom" priority="999" constant="5" id="c8X-xi-u8Z"/>
                     <constraint firstItem="bwb-Ib-sok" firstAttribute="top" secondItem="Ssa-TL-ct5" secondAttribute="top" id="vbq-5O-HuY"/>
                 </constraints>
             </tableViewCellContentView>
@@ -57,7 +57,4 @@
             <point key="canvasLocation" x="584" y="263"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="Elf-Male.png" width="200" height="176"/>
-    </resources>
 </document>
