--- a/Dark Days/Dark Days/HeroCreation.storyboard
+++ b/Dark Days/Dark Days/HeroCreation.storyboard
@@ -1,81 +1,35 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="pyA-fk-XHE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xZr-HS-ZaI">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--New Hero-->
-        <scene sceneID="ewJ-xi-FDr">
+        <!--Navigation Controller-->
+        <scene sceneID="NoB-oo-MlT">
             <objects>
-                <viewController id="pyA-fk-XHE" customClass="HeroCreationViewController" customModule="Dark_Days" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="S0h-YM-Xqf"/>
-                        <viewControllerLayoutGuide type="bottom" id="PM0-Rz-Qaa"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="jAm-EA-FEG">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h4z-Qq-RGm">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                                <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Hero Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C9E-6r-SVk">
-                                        <rect key="frame" x="15" y="15" width="289" height="44"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="NSf-Gs-vo0"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aAC-5L-AUb">
-                                        <rect key="frame" x="16" y="74" width="289" height="240"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="240" id="dyc-j6-Ydx"/>
-                                        </constraints>
-                                        <connections>
-                                            <segue destination="0ki-a8-qxs" kind="embed" id="jn7-yz-8rZ"/>
-                                        </connections>
-                                    </containerView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="C9E-6r-SVk" firstAttribute="leading" secondItem="h4z-Qq-RGm" secondAttribute="leading" constant="15" id="357-60-ZDY"/>
-                                    <constraint firstItem="aAC-5L-AUb" firstAttribute="centerX" secondItem="h4z-Qq-RGm" secondAttribute="centerX" id="CsE-y6-5Cg"/>
-                                    <constraint firstAttribute="bottom" secondItem="aAC-5L-AUb" secondAttribute="bottom" constant="10" id="RfT-gi-nFe"/>
-                                    <constraint firstItem="aAC-5L-AUb" firstAttribute="width" secondItem="C9E-6r-SVk" secondAttribute="width" id="coH-em-sHd"/>
-                                    <constraint firstAttribute="trailing" secondItem="C9E-6r-SVk" secondAttribute="trailing" constant="15" id="gYm-2y-zRF"/>
-                                    <constraint firstItem="C9E-6r-SVk" firstAttribute="centerX" secondItem="h4z-Qq-RGm" secondAttribute="centerX" id="kQK-RG-Jmh"/>
-                                    <constraint firstItem="aAC-5L-AUb" firstAttribute="top" secondItem="C9E-6r-SVk" secondAttribute="bottom" constant="15" id="mSq-MC-6Xl"/>
-                                    <constraint firstItem="C9E-6r-SVk" firstAttribute="top" secondItem="h4z-Qq-RGm" secondAttribute="top" constant="15" id="tZB-bD-axL"/>
-                                </constraints>
-                            </scrollView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="h4z-Qq-RGm" firstAttribute="centerX" secondItem="jAm-EA-FEG" secondAttribute="centerX" id="Je7-qp-NLo"/>
-                            <constraint firstItem="h4z-Qq-RGm" firstAttribute="height" secondItem="jAm-EA-FEG" secondAttribute="height" id="W7t-9z-kHR"/>
-                            <constraint firstItem="h4z-Qq-RGm" firstAttribute="centerY" secondItem="jAm-EA-FEG" secondAttribute="centerY" id="WNq-Z2-DZk"/>
-                            <constraint firstItem="h4z-Qq-RGm" firstAttribute="width" secondItem="jAm-EA-FEG" secondAttribute="width" id="xSK-dh-09D"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="New Hero" id="DM9-Rg-DUV"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                <navigationController id="xZr-HS-ZaI" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7hA-Aq-4wR">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
                     <connections>
-                        <outlet property="nameField" destination="C9E-6r-SVk" id="BQ2-5A-kbK"/>
-                        <outlet property="scrollView" destination="h4z-Qq-RGm" id="ekW-5m-ypi"/>
+                        <segue destination="Hau-kM-5z4" kind="relationship" relationship="rootViewController" id="bTp-dt-eDQ"/>
                     </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5HV-Ve-a1r" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tej-Un-hEh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="468" y="191"/>
+            <point key="canvasLocation" x="41" y="36"/>
         </scene>
         <!--RaceList-->
-        <scene sceneID="qbC-3N-PKX">
+        <scene sceneID="xrO-bZ-7ZW">
             <objects>
-                <viewControllerPlaceholder storyboardName="RaceList" id="0ki-a8-qxs" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3up-gr-wdj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="RaceList" id="Hau-kM-5z4" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="mnz-bw-C5w"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YBw-J3-2QP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="786" y="92"/>
+            <point key="canvasLocation" x="480" y="36"/>
         </scene>
     </scenes>
 </document>
