Moved additional layout to view

--- a/Dark Days/Dark Days/HeroCreation.storyboard
+++ b/Dark Days/Dark Days/HeroCreation.storyboard
@@ -9,12 +9,12 @@
         <scene sceneID="NoB-oo-MlT">
             <objects>
                 <navigationController id="xZr-HS-ZaI" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7hA-Aq-4wR">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="7hA-Aq-4wR">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Hau-kM-5z4" kind="relationship" relationship="rootViewController" id="bTp-dt-eDQ"/>
+                        <segue destination="Hau-kM-5z4" kind="relationship" relationship="rootViewController" id="K2E-lI-7ir"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tej-Un-hEh" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,7 +25,7 @@
         <scene sceneID="xrO-bZ-7ZW">
             <objects>
                 <viewControllerPlaceholder storyboardName="RaceList" id="Hau-kM-5z4" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="mnz-bw-C5w"/>
+                    <navigationItem key="navigationItem" title="Races" id="mnz-bw-C5w"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YBw-J3-2QP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
