--- a/Dark Days/Dark Days/RaceList.storyboard
+++ b/Dark Days/Dark Days/RaceList.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--Race List View Controller-->
+        <!--Races-->
         <scene sceneID="r6H-Mr-8c5">
             <objects>
-                <tableViewController id="FD1-VF-jd6" customClass="RaceListViewController" customModule="Dark_Days" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Races" id="FD1-VF-jd6" customClass="RaceListViewController" customModule="Dark_Days" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="fzn-Sh-QXQ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -18,6 +18,7 @@
                             <outlet property="delegate" destination="FD1-VF-jd6" id="fha-uy-oNv"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Races" id="BPh-TJ-HFn"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kb0-6Z-vVh" userLabel="First Responder" sceneMemberID="firstResponder"/>
