--- a/Dark Days/Dark Days/HeroList.storyboard
+++ b/Dark Days/Dark Days/HeroList.storyboard
@@ -21,7 +21,7 @@
                     <navigationItem key="navigationItem" title="Heroes" id="DQU-4p-Zug">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="b43-or-JfE">
                             <connections>
-                                <segue destination="6k8-mh-k5Q" kind="presentation" id="mZW-CR-uaY"/>
+                                <segue destination="Jkw-ar-4IH" kind="presentation" id="fvv-QO-Qcq"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -31,23 +31,6 @@
             </objects>
             <point key="canvasLocation" x="-616" y="260"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Msc-7D-DWm">
-            <objects>
-                <navigationController id="6k8-mh-k5Q" sceneMemberID="viewController">
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="trF-r0-sv2">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="Jkw-ar-4IH" kind="relationship" relationship="rootViewController" id="wHf-IM-cKH"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mg5-3E-lny" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-236" y="260"/>
-        </scene>
         <!--HeroCreation-->
         <scene sceneID="xDZ-j2-5Wa">
             <objects>
@@ -56,7 +39,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hCC-hp-VCu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="70.5" y="260"/>
+            <point key="canvasLocation" x="-291" y="260"/>
         </scene>
     </scenes>
 </document>
