--- a/Dark Days/Dark Days/ItemList.storyboard
+++ b/Dark Days/Dark Days/ItemList.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zBn-ei-2t1">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zBn-ei-2t1">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -8,7 +8,7 @@
         <!--Items-->
         <scene sceneID="B2U-LT-TKA">
             <objects>
-                <tableViewController id="zBn-ei-2t1" customClass="ItemListViewController" customModule="Dark_Days" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Items" id="zBn-ei-2t1" customClass="ItemListViewController" customModule="Dark_Days" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="1wy-D5-9iy">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -18,7 +18,6 @@
                             <outlet property="delegate" destination="zBn-ei-2t1" id="wMS-DO-vsv"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Items" id="KLs-TK-Jk3"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wSI-bo-FU0" userLabel="First Responder" sceneMemberID="firstResponder"/>
