--- a/Dark Days/Dark Days/HeroCreation.storyboard
+++ b/Dark Days/Dark Days/HeroCreation.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -15,41 +16,46 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Xfa-P7-i6p" kind="relationship" relationship="rootViewController" id="hAv-tu-eSk"/>
+                        <segue destination="nDV-16-MyN" kind="relationship" relationship="rootViewController" id="pWb-lO-W5X"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tej-Un-hEh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="41" y="36"/>
         </scene>
-        <!--Choose Race-->
-        <scene sceneID="0Gu-k8-A1q">
+        <!--Hero Creation-->
+        <scene sceneID="COX-Og-hew">
             <objects>
-                <tableViewController title="Choose Race" id="Xfa-P7-i6p" customClass="RaceListViewController" customModule="Dark_Days" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="tMe-wF-cws">
+                <viewController title="Hero Creation" id="nDV-16-MyN" customClass="HeroCreationViewController" customModule="Dark_Days" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hNF-BX-PaY"/>
+                        <viewControllerLayoutGuide type="bottom" id="hoM-Yr-Y9c"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bse-Ut-NgE">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9at-qP-hkI">
+                                <rect key="frame" x="31" y="72" width="258" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <connections>
-                            <outlet property="dataSource" destination="Xfa-P7-i6p" id="59I-hi-9gy"/>
-                            <outlet property="delegate" destination="Xfa-P7-i6p" id="l57-Hf-gj2"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Choose Race" id="e0s-VH-I0P">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="eQN-kh-9wT">
-                            <connections>
-                                <segue destination="xZr-HS-ZaI" kind="custom" customClass="DismissSegue" customModule="Dark_Days" customModuleProvider="target" id="rdc-At-tuA"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Next" id="OK0-Xn-P1c"/>
-                    </navigationItem>
+                        <constraints>
+                            <constraint firstItem="9at-qP-hkI" firstAttribute="top" secondItem="hNF-BX-PaY" secondAttribute="bottom" constant="8" id="G9j-CN-P2Q"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9at-qP-hkI" secondAttribute="trailing" constant="15" id="Qdh-k1-ckx"/>
+                            <constraint firstItem="9at-qP-hkI" firstAttribute="leading" secondItem="bse-Ut-NgE" secondAttribute="leadingMargin" constant="15" id="bzt-QL-Zv8"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="MZD-CG-2IS"/>
                     <connections>
-                        <outlet property="nextButton" destination="OK0-Xn-P1c" id="OUq-Cq-iUf"/>
+                        <outlet property="nameField" destination="9at-qP-hkI" id="Ick-bO-gXv"/>
                     </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Vi3-1P-Bo2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fad-zP-jDW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="455" y="36"/>
+            <point key="canvasLocation" x="433" y="36"/>
         </scene>
     </scenes>
 </document>
