--- a/Dark Days/Dark Days/HeroCreation.storyboard
+++ b/Dark Days/Dark Days/HeroCreation.storyboard
@@ -48,9 +48,21 @@
                             <constraint firstItem="9at-qP-hkI" firstAttribute="leading" secondItem="bse-Ut-NgE" secondAttribute="leadingMargin" constant="15" id="bzt-QL-Zv8"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="MZD-CG-2IS"/>
+                    <navigationItem key="navigationItem" id="MZD-CG-2IS">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="CKh-Ni-sA5">
+                            <connections>
+                                <segue destination="xZr-HS-ZaI" kind="custom" customClass="DismissSegue" customModule="Dark_Days" customModuleProvider="target" id="zz8-lg-Ioe"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Next" id="noM-nb-y3g">
+                            <connections>
+                                <action selector="nextButtonTapped:" destination="nDV-16-MyN" id="rna-n5-o5r"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="nameField" destination="9at-qP-hkI" id="Ick-bO-gXv"/>
+                        <outlet property="nextButton" destination="noM-nb-y3g" id="GaI-5A-PGD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fad-zP-jDW" userLabel="First Responder" sceneMemberID="firstResponder"/>
