--- a/Dark Days/Dark Days/Root.storyboard
+++ b/Dark Days/Dark Days/Root.storyboard
@@ -10,7 +10,7 @@
             <objects>
                 <navigationController id="QqX-TU-NP1" sceneMemberID="viewController">
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="uGj-iQ-sTw">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="uGj-iQ-sTw">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
